// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footnote renders closed 1`] = `
.c4 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c4 .c7,
.c4 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  overflow: hidden;
  z-index: 99999;
  visibility: hidden;
}

.c1 {
  position: relative;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  overflow: auto;
  position: relative;
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c2 {
  display: none;
}

.c5 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c6 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:768px) {
  .c5 {
    display: block;
  }
}

<div>
  Terms and conditions may apply
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div
    class="c0"
    role="alert"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <hr
              class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </div>
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz c3"
                  >
                    <h2
                      class="c4"
                      data-testid="heading"
                    >
                      Terms and conditions
                    </h2>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <hr
              class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </div>
        </div>
        <div
          class="c6"
        />
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Footnote renders opened 1`] = `
.c4 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c4 .c7,
.c4 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  overflow: hidden;
  z-index: 99999;
  visibility: hidden;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1 {
  position: relative;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  overflow: auto;
  position: relative;
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c2 {
  display: none;
}

.c5 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c6 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:768px) {
  .c5 {
    display: block;
  }
}

<div>
  Terms and conditions may apply
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div
    class="c0"
    role="alert"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <hr
              class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </div>
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz c3"
                  >
                    <h2
                      class="c4"
                      data-testid="heading"
                    >
                      Terms and conditions
                    </h2>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <hr
              class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </div>
        </div>
        <div
          class="c6"
        />
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
